--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </style>
     
     <script type="text/javascript" src="lib/utils.js"></script>
+    <script type="text/javascript" src="lib/block.js"></script>
     <script type="text/javascript" src="lib/view.js"></script>
     <script type="text/javascript" src="lib/controller.js"></script>
     <script type="text/javascript" src="lib/main.js"></script>
