adding the playmode and loading the ghost

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script type="text/javascript" src="lib/view.js"></script>
     <script type="text/javascript" src="lib/controller.js"></script>
     <script type="text/javascript" src="lib/jsonHandler.js"></script>
+    <script type="text/javascript" src="lib/webgl-obj-loader.min.js"></script>
+    <script type="text/javascript" src="models/ghost.js"></script>
     <script type="text/javascript" src="lib/main.js"></script>
 </head>
 
