scaling and allowing displacements of the ghost. enabling refresh of the drawing

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="lib/controller.js"></script>
     <script type="text/javascript" src="lib/jsonHandler.js"></script>
     <script type="text/javascript" src="lib/webgl-obj-loader.min.js"></script>
+    <script type="text/javascript" src="lib/quaternion.min.js"></script>
     <script type="text/javascript" src="models/ghost.js"></script>
     <script type="text/javascript" src="lib/main.js"></script>
 </head>
