--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
     </style>
 
     <script type="text/javascript" src="lib/utils.js"></script>
-    <script type="text/javascript" src="lib/block.js"></script>
-    <script type="text/javascript" src="lib/view.js"></script>
-    <script type="text/javascript" src="lib/controller.js"></script>
+    <script type="text/javascript" src="src/block.js"></script>
+    <script type="text/javascript" src="src/ghost.js"></script>
+    <script type="text/javascript" src="src/view.js"></script>
+    <script type="text/javascript" src="src/controller.js"></script>
     <script type="text/javascript" src="lib/jsonHandler.js"></script>
     <script type="text/javascript" src="lib/webgl-obj-loader.min.js"></script>
     <script type="text/javascript" src="lib/quaternion.min.js"></script>
     <script type="text/javascript" src="models/ghost.js"></script>
-    <script type="text/javascript" src="lib/main.js"></script>
+    <script type="text/javascript" src="src/main.js"></script>
 </head>
 
 
