allowing ghost movements, jumps, collisions and falls. Also repairing the json loader that had troubles with the buffers stored in the blocks

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="src/ghost.js"></script>
     <script type="text/javascript" src="src/view.js"></script>
     <script type="text/javascript" src="src/controller.js"></script>
-    <script type="text/javascript" src="lib/jsonHandler.js"></script>
+    <script type="text/javascript" src="src/jsonHandler.js"></script>
     <script type="text/javascript" src="lib/webgl-obj-loader.min.js"></script>
     <script type="text/javascript" src="lib/quaternion.min.js"></script>
     <script type="text/javascript" src="models/ghost.js"></script>
