--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <input type="text" id="json"  value="" />
       <button onclick="loadWorld()">Load raw json</button>
       </div>
+  <div id="fps"></div>
   <canvas id="c"></canvas>
 
 </body>
